// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Kakapo/> render 1`] = `
<div
  className="kakapo"
>
  <h5>
    Add a sound from Kakapo.com
  </h5>
  <div
    className=""
  />
</div>
`;

exports[`<Kakapo/> render items 1`] = `
<div
  className="kakapo"
>
  <h5>
    Add a sound from Kakapo.com
  </h5>
  <div
    className="kakapofavs-items"
  >
    <div
      className="kakapo-item"
      onClick={[Function]}
      role="link"
      tabIndex={-1}
    >
      <div
        className="thumbnail"
      >
        <i
          className="icon-null"
        />
      </div>
      <span
        className="title"
      >
        Thunder
      </span>
    </div>
    <div
      className="kakapo-item"
      onClick={[Function]}
      role="link"
      tabIndex={-1}
    >
      <div
        className="thumbnail"
      >
        <i
          className="icon-null"
        />
      </div>
      <span
        className="title"
      >
        Thunder
      </span>
    </div>
    <div
      className="kakapo-item"
      onClick={[Function]}
      role="link"
      tabIndex={-1}
    >
      <div
        className="thumbnail"
      >
        <i
          className="icon-null"
        />
      </div>
      <span
        className="title"
      >
        Thunder
      </span>
    </div>
    <div
      className="kakapo-item"
      onClick={[Function]}
      role="link"
      tabIndex={-1}
    >
      <div
        className="thumbnail"
      >
        <i
          className="icon-null"
        />
      </div>
      <span
        className="title"
      >
        Thunder
      </span>
    </div>
    <div
      className="kakapo-item"
      onClick={[Function]}
      role="link"
      tabIndex={-1}
    >
      <div
        className="thumbnail"
      >
        <i
          className="icon-null"
        />
      </div>
      <span
        className="title"
      >
        Thunder
      </span>
    </div>
  </div>
</div>
`;
